tests/negative/meta_capacity_string.urb
n = 1 0,
n.capacity = "x",
